# obko-test

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeUserPresets.json.template  README.md  STM32H7.ioc  STM32H743VITX_FLASH.ld  obko-test-attach.launch  obko-test-debug.launch
docs/: motors.txt
include/: FreeRTOSConfig.h  config.h  ethernet.h  gpio.h  i2c.h  main.h  motors.h  tools.h  uart.h
src/: ethernet.c  gpio.c  i2c.c  main.c  motors.c  uart.c
